core code updates
git-svn-id: https://svn.code.sf.net/p/hsqldb/svn/base/trunk@5369 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/resources/sql-state-messages_es.properties
+++ b/src/org/hsqldb/resources/sql-state-messages_es.properties
@@ -2,11 +2,11 @@
 
 # Translated by Miquel Jordana (miquel71@users dot sourceforge.net)
 #
-# todo : 0454
+# todo translation : 0454, 4872, 5611
 #
 # @author Campbell Boucher Burnet (boucherb@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
-# @version 2.0.0
+# @version 2.3.3
 # @since 1.9.0
 #
 # do not translate this section
@@ -464,6 +464,7 @@
 
 # HSQLDB internal transactions
 4871=40501 deshacer transacción ('rollback'): fila modificada por múltiples transacciones
+4872=40502 statement execution aborted: timeout reached
 
 # syntax error or access rule violation
 5000=42000 error de sintáxis o violación de acceso
@@ -582,6 +583,7 @@
 5608=42608 declaración incorrecta ya que no respeta la restricción sobre datos, parámetro SQL DATA
 5609=42609 la firma de la rutina no se ha encontrado para
 5610=42610 declaración incorrecta 'aggregate function'
+5611=42611 type incompatible with declared return type
 
 # with check option violation
 5700=44000 violación de opción 'with check option'
