--- a/src/org/hsqldb/resources/sql-state-messages_es.properties
+++ b/src/org/hsqldb/resources/sql-state-messages_es.properties
@@ -2,7 +2,7 @@
 
 # Translated by Miquel Jordana (miquel71@users dot sourceforge.net)
 #
-# todo translation : 0454, 4872, 5611
+# todo translation : 0454, 4872, 5611, 5612
 #
 # @author Campbell Boucher Burnet (boucherb@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
@@ -584,6 +584,7 @@
 5609=42609 la firma de la rutina no se ha encontrado para
 5610=42610 declaración incorrecta 'aggregate function'
 5611=42611 type incompatible with declared return type
+5612=42612 SQL exception already used
 
 # with check option violation
 5700=44000 violación de opción 'with check option'
