core code updates
git-svn-id: https://svn.code.sf.net/p/hsqldb/svn/base/trunk@5493 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/resources/sql-state-messages_es.properties
+++ b/src/org/hsqldb/resources/sql-state-messages_es.properties
@@ -4,7 +4,7 @@
 #
 # todo translation : 0454, 4872, 5611, 5612
 #
-# @author Campbell Boucher Burnet (boucherb@users dot sourceforge.net)
+# @author Campbell Burnet (boucherb@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
 # @version 2.3.3
 # @since 1.9.0
@@ -105,6 +105,8 @@
 0468=S1000 Superado el tamaño máximo para el fichero de datos
 0469=S1000 Archivo de datos en uso
 0470=S1000 Backup error
+0471=S1000 Data cache size limit is reached
+0472=S1000 problem with log file
 
 # text tables
 0481=S1000 El origen de datos para la tabla no se ha especificado
