--- a/trunk/src/org/hsqldb/resources/sql-state-messages_es.properties
+++ b/trunk/src/org/hsqldb/resources/sql-state-messages_es.properties
@@ -2,7 +2,7 @@
 
 # Translated by Miquel Jordana (miquel71@users dot sourceforge.net)
 #
-# todo translation : 0454, 4872, 5611, 5612
+# todo translation : 0454, 4872, 5611, 5612, 0470, 0471, 0472, 2474
 #
 # @author Campbell Burnet (boucherb@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
@@ -328,6 +328,7 @@
 3471=22501 el valor no se puede convertir al tipo destino
 3472=22511 argumento de la función incorrecto
 3473=22521 fallo de serializar el objeto
+3474=22522 query execution reached limit of recursion
 
 # 04-PSM
 3488=2202A excepción de datos: valor nulo en el campo referencia
