text table fix 5
git-svn-id: https://svn.code.sf.net/p/hsqldb/svn/base/trunk@5610 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/resources/sql-state-messages_es.properties
+++ b/src/org/hsqldb/resources/sql-state-messages_es.properties
@@ -2,7 +2,7 @@
 
 # Translated by Miquel Jordana (miquel71@users dot sourceforge.net)
 #
-# todo translation : 0454, 4872, 5611, 5612, 0470, 0471, 0472, 2474
+# todo translation : 0332, 0454, 4872, 5611, 5612, 0470, 0471, 0472, 2474
 #
 # @author Campbell Burnet (boucherb@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
@@ -62,7 +62,8 @@
 0304=S0504
 0320=S0521 la operación no está permitida en una tabla de texto con datos
 0321=S0522 sentencia inválida - es necesario indicar tabla de texto
-0331=S0531 error de codificación / decodificación
+0331=S0531 table de texto error de codificación / decodificación
+0332=S0532 UTF-16 codificación
 
 # HSQLDB authentication
 0391=S1000 password complexity
@@ -201,8 +202,8 @@
 1801=0F001 excepción del localizador: valor indicado incorrecto
 
 # HSQLDB locator
-3474=0F502 lob antiguo y ya no es válido
-3475=0F503 lob - canal de datos ('stream') está cerrado
+1852=0F502 lob antiguo y ya no es válido
+1853=0F503 lob - canal de datos ('stream') está cerrado
 
 # resignal when handler not active
 1900=0K000 señal reenviada cuando el canal no estaba activo
