--- a/trunk/src/org/hsqldb/resources/sql-state-messages_es.properties
+++ b/trunk/src/org/hsqldb/resources/sql-state-messages_es.properties
@@ -2,7 +2,7 @@
 
 # Translated by Miquel Jordana (miquel71@users dot sourceforge.net)
 #
-# todo translation : 0332, 0454, 4872, 5611, 5612, 0470, 0471, 0472, 2474
+# todo translation : 0332, 0454, 4872, 5611, 5612, 0470, 0471, 0472, 2474, 3462
 #
 # @author Campbell Burnet (boucherb@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
@@ -324,6 +324,7 @@
 3459=22026 excepción de datos: dato tipo texto, discondancia en la longitud
 3460=22027 excepción de datos: error de trim
 3461=22029 excepción de datos: no hay caracteres in texto UCS
+3462=22020 excepción de datos: invalid period value
 
 # HSQLDB data exception
 3471=22501 el valor no se puede convertir al tipo destino
