--- a/src/org/hsqldb/resources/sql-state-messages_es.properties
+++ b/src/org/hsqldb/resources/sql-state-messages_es.properties
@@ -2,7 +2,7 @@
 
 # Translated by Miquel Jordana (miquel71@users dot sourceforge.net)
 #
-# todo translation : 0332, 0454, 4872, 5611, 5612, 0470, 0471, 0472, 2474, 3462, 6030 to 6036, 3502
+# todo translation : 0332, 0454, 4872, 5611, 5612, 0470, 0471, 0472, 2474, 3462
 #
 # @author Campbell Burnet (boucherb@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
@@ -614,15 +614,6 @@
 
 # HSQLDB - SQL/JRT
 6021=46511 los tipos de parámetros declarados no corresponden con la firma del método
-
-# Table period definition errors
-6030=46520 The period name cannot be a column name
-6031=46521 The period must have exactly two columns
-6032=46522 The columns of the period must exists
-6033=46523 The two columns of a period must be set as not null
-6034=46524 The columns of a period must be of date or timestamp type
-6035=46525 The two columns of a period must be of the same date time type
-6036=46526 At most one period definition of this type can be defined
 
 # Unknown Error: Catch-All
 6500=99000 Error desconocido: no contemplado ('Catch-All')
