core code updates
git-svn-id: https://svn.code.sf.net/p/hsqldb/svn/base/trunk@5690 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/resources/sql-state-messages_es.properties
+++ b/src/org/hsqldb/resources/sql-state-messages_es.properties
@@ -4,7 +4,7 @@
 #
 # todo translation : 0332, 0454, 4872, 5611, 5612, 0470, 0471, 0472, 2474, 3462
 #
-# @author Campbell Burnet (boucherb@users dot sourceforge.net)
+# @author Campbell Burnet (campbell-burnet@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
 # @version 2.3.3
 # @since 1.9.0
