core code updates
git-svn-id: https://svn.code.sf.net/p/hsqldb/svn/base/trunk@5723 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/resources/sql-state-messages_es.properties
+++ b/src/org/hsqldb/resources/sql-state-messages_es.properties
@@ -6,7 +6,7 @@
 #
 # @author Campbell Burnet (campbell-burnet@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
-# @version 2.3.3
+# @version 2.3.5
 # @since 1.9.0
 #
 # do not translate this section
@@ -71,8 +71,9 @@
 # Server
 0401=S1000 Datos transferidos corruptos
 0402=S0504 base de datos desconectada
-0403=S0504 La versión del cliente '$$' es incompatible.  \
-        Se requiere una versión de protocolo de red HSQLDB '$$'
+0403=S0504 Se requiere una versión de protocolo de red HSQLDB '$$'  \
+           La versión del cliente '$$' es incompatible.
+
 0404=S0504 El cliente de red no es un controlador JDBC HSQLDB
 0405=S0504 El cliente está usando el protocolo HSQLDB http en lugar de hsql
 0406=S0504 Lectura incompleta de datos personalizados
@@ -89,7 +90,7 @@
 0451=S1000 Fallo al obtener un bloqueo en la base de datos
 0452=S1000 Error de lectura/escritura de fichero
 0453=S1000 Versión de fichero de base de datos errónea
-0454=S1000 data file is modified but backup file does not exist
+0454=S1000 .data file is modified but .backup file does not exist
 0455=S1000 La base de datos está en modo solo lectura
 0456=S1000 La tabla de datos es de solo lectura
 0457=S1000 Acceso denegado
