More general handling of SqlTool JDBC driver specification
git-svn-id: http://svn.code.sf.net/p/hsqldb/svn/base/trunk@5874 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/cmdline/sqltool_de.properties
+++ b/src/org/hsqldb/cmdline/sqltool_de.properties
@@ -32,7 +32,7 @@ SqlTool.abort.continue.mutuallyexclusive=Die Schalter '--abortOnErr' und \
 sqltempfile.fail=Die angegebe SQL konnte nicht in der Datei gespeichert werden.\u000aUrsache: %{1}
 rcdata.inlineurl.missing=Das 'url' Element wird für inlineRC benötigt.
 rcdata.inline.extravars=Nicht unterstützte(s) inlineRC Element(e) angegeben: %{1}.
-rcdata.inlineusername.missing=Das 'user' Element wird für inlineRC benötigt.
+#rcdata.driver.conflict=
 rcdata.password.visible=Das 'password' Element muß leer sein.  \
             Um ein Passwort zu verwenden lassen Sie das\u000a\
             'password' Element weg, sie werden dann separat danach gefragt!
