--- a/src/org/hsqldb/cmdline/sqltool_nl.properties
+++ b/src/org/hsqldb/cmdline/sqltool_nl.properties
@@ -32,7 +32,7 @@ SqlTool.abort.continue.mutuallyexclusive=Opties '--abortOnErr' en \
 sqltempfile.fail=Het schrijven van de opgegeven sql naar een tijdelijk bestand is mislukt.\u000aReden: %{1}
 rcdata.inlineurl.missing=Het 'url' element is verplicht bij het gebruik van inline RC argument.
 rcdata.inline.extravars=Niet ondersteunde inline element(en) verstrekt: %{1}.
-rcdata.inlineusername.missing=Het 'user' element is verplicht bij het gebruik van inline RC argument.
+#rcdata.driver.conflict=
 password.readfail=Wachtwoord lezen is mislukt.\u000aReden: %{1}
 sqltempfile.fail=Het schrijven van de opgegeven sql naar een tijdelijk bestand is mislukt.\u000aReden: %{1}
 rcdata.genfromvalues.fail=Het genereren van RCData uit de opgegeven waardes is mislukt.\u000aReden: %{1}
