--- a/trunk/src/org/hsqldb/cmdline/sqltool_de.properties
+++ b/trunk/src/org/hsqldb/cmdline/sqltool_de.properties
@@ -32,7 +32,7 @@ SqlTool.abort.continue.mutuallyexclusive=Die Schalter '--abortOnErr' und \
 sqltempfile.fail=Die angegebe SQL konnte nicht in der Datei gespeichert werden.\u000aUrsache: %{1}
 rcdata.inlineurl.missing=Das 'url' Element wird für inlineRC benötigt.
 rcdata.inline.extravars=Nicht unterstützte(s) inlineRC Element(e) angegeben: %{1}.
-rcdata.inlineusername.missing=Das 'user' Element wird für inlineRC benötigt.
+#rcdata.driver.conflict=
 rcdata.password.visible=Das 'password' Element muß leer sein.  \
             Um ein Passwort zu verwenden lassen Sie das\u000a\
             'password' Element weg, sie werden dann separat danach gefragt!
