--- a/src/org/hsqldb/resources/sql-state-messages_es.properties
+++ b/src/org/hsqldb/resources/sql-state-messages_es.properties
@@ -6,13 +6,14 @@
 #
 # @author Campbell Burnet (campbell-burnet@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
-# @version 2.3.5
+# @version 2.5.0
 # @since 1.9.0
 #
 # do not translate this section
 0001=: $$ required: $$
 0002=; $$ table: $$
 0003=; $$ table: $$ column: $$
+0004=; $$ table: $$ value: $$
 
 # message parts
 0021=\u0020tabla $$ error contando filas : $$ leídas, pero $$ requeridas
@@ -487,9 +488,14 @@
 5509=42509 tipo no encontrado o el usuario no tiene privilegios suficientes
 5510=42510 nombre demasiado largo
 
-# genrated columns
+# generated columns
 5512=42512 expresión incorrecta en paret CHECK o GENERATED
 5513=42513 asignación a columna generada
+
+# period columns
+5516=42516 invalid period column name or type
+5517=42517 operation not allowed - generated or period column
+5518=42518 operation not allowed - system versioning
 
 # constraint defintition issues
 5520=42520 SET NULL requiere una columna nulable
