--- a/trunk/src/org/hsqldb/resources/sql-state-messages_es.properties
+++ b/trunk/src/org/hsqldb/resources/sql-state-messages_es.properties
@@ -2,11 +2,11 @@
 
 # Translated by Miquel Jordana (miquel71@users dot sourceforge.net)
 #
-# todo translation : 0332, 0454, 4872, 5611, 5612, 0470, 0471, 0472, 2474, 3462
+# todo translation : 0332, 0454, 4872, 5611, 5612, 0470, 0471, 0472, 2474, 3462, 5516-18, 5613
 #
 # @author Campbell Burnet (campbell-burnet@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
-# @version 2.5.0
+# @version 2.5.2
 # @since 1.9.0
 #
 # do not translate this section
@@ -597,6 +597,7 @@
 5610=42610 declaración incorrecta 'aggregate function'
 5611=42611 type incompatible with declared return type
 5612=42612 SQL exception already used
+5613=42613 wildcard * not allowed in routine, view or trigger definition
 
 # with check option violation
 5700=44000 violación de opción 'with check option'
