--- a/trunk/src/org/hsqldb/resources/sql-state-messages_es.properties
+++ b/trunk/src/org/hsqldb/resources/sql-state-messages_es.properties
@@ -333,6 +333,7 @@
 3472=22511 argumento de la función incorrecto
 3473=22521 fallo de serializar el objeto
 3474=22522 query execution reached limit of recursion
+3475=22523 unsupported format string
 
 # 04-PSM
 3488=2202A excepción de datos: valor nulo en el campo referencia
