core code updates - updatable result set enhancements
git-svn-id: http://svn.code.sf.net/p/hsqldb/svn/base/trunk@6777 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/resources/sql-state-messages_es.properties
+++ b/src/org/hsqldb/resources/sql-state-messages_es.properties
@@ -2,11 +2,11 @@
 
 # Translated by Miquel Jordana (miquel71@users dot sourceforge.net)
 #
-# todo translation : 0332, 0454, 4872, 5611, 5612, 0470, 0471, 0472, 2474, 3462, 5516-18, 5613
+# todo translation : 0073 0074 0332, 0454, 4872, 5611, 5612, 0470, 0471, 0472, 2474, 3462, 5516-18, 5613
 #
 # @author Campbell Burnet (campbell-burnet@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
-# @version 2.6.0
+# @version 2.7.4
 # @since 1.9.0
 #
 # do not translate this section
@@ -47,6 +47,8 @@
 0070=; El resultado de la consulta es vacío
 0071=; Posición actual del resultado de la consulta es antes del primer registro
 0072=; Posición actual del resultado de la consulta es después del último registro
+0073=; ResultSet is positioned on insert row
+0074=; current row has been deleted
 
 # message parts
 0081=; en LIMIT, OFFSET o FETCH
